descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2015-08-31  Release 7.24.4                                     ---
----------------------------------------------------------------------



----------------------------------------------------------------------
--- 2014-06-02  Release 7.24.2                                     ---
----------------------------------------------------------------------

This patch release includes a plethora of significant bug fixes and
improvements to BRL-CAD including fixing ADRT/TIE fast triangle ray
tracing on 32-bit platforms, fixing an issue in our FASTGEN converter
that affected the import of very complex geometry models, upgrading
one of our third-party dependencies (libpng) in response to a
vulnerability report, and improving the 'comb' and 'search' commands
with new options for restructuring and searching geometry.
Enhancements continue to be made to our boundary representation (BREP)
NURBS infrastructure in support of hybrid representation modeling and
improved geometry interchange with other CAD systems.

* improved rcodes output to inform user what changed - Cliff Yapp
* fixed inside command for ellipsoid primitives - Cliff Yapp
* restored suppressed mged output after some commands - Cliff Yapp
* added rtwizard -s square image size option - Cliff Yapp
* documented image size options in rtwizard man page - Cliff Yapp
* added view center specification dialog to rtwizard - Cliff Yapp
* increased rtwizard window size for button visibility - Cliff Yapp
* image conversion -R/-G/-B options now require weight - Mohit Daga
* improved option consistency for image processing tools - Mohit Daga
* improved pipe ray tracing grazing hit behavior - Keith Bowman
* upgraded libpng, now at version 1.6.10 - Erik Greenwald, Cliff Yapp